--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "lint": "eslint .",
+    "preview": "vite preview --port $PORT --host 0.0.0.0",
     "vite": "^4.0.0"
   },
   "devDependencies": {
