--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
-    "lint": "eslint .",
-    "preview": "vite preview --port $PORT --host 0.0.0.0",
-    "vite": "^4.0.0"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
